--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@
 
 .indicador {
     position: absolute;
-    right: calc(100% + 6px); /* Línea fuera del cuerpo */
+    right: calc(100% + 6px);
     top: 50%;
     transform: translateY(-50%);
     width: 80%;
-    height: 40%;
+    height: 60%;
     background: #000;
     color: #FFF;
     display: flex;
@@ -99,6 +99,7 @@
     right: calc(100% + 6px);
     top: 50%;
     transform: translateY(-50%);
+    border: .7px solid rgba(0,0,0,20%);
     width: 26px;
     height: 26px;
     border-radius: 4px;
